# Streamlit-Template

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  .sourcery.yaml  Compare-GitBranches-With-WinMerge.ps1  Dockerfile  Makefile  Makefile.md  README.md  Usage.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
assets/animations/: README.md
assets/doc_assets/: README.md
assets/images/: README.md
assets/styles/: README.md
pages/: 1_example_page.py
utils/: README.md  helpers.py  style.css
